Bug 294578 - Problem when moving grouped pictures from one album to another
Summary: Problem when moving grouped pictures from one album to another
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-ItemsGroup (other bugs)
Version First Reported In: 2.5.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-21 19:20 UTC by philippe.quaglia
Modified: 2017-07-29 05:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7.0
Sentry Crash Report:


Attachments
(203.42 KB, image/png)
2012-02-21 19:20 UTC, philippe.quaglia
Details

Note You need to log in before you can comment on or make changes to this bug.
Description philippe.quaglia 2012-02-21 19:20:54 UTC
Created attachment 68989 [details]
 


Version:           2.5.0
OS:                Linux

When moving a set of grouped pictures from one album to another, It seems that only the first picture is moved, and that the other grouped pictures stays in the original album. However, digikam seems to be lost, and does not display anymore the grouped pictures that were in the original folder.

 

Reproducible: Always

Steps to Reproduce:
Open an album containing some grouped pictures that are not expanded. Move them to another album. In the new album, you can now only see the first of the grouped pictures, but the other grouped pictures are no more visible in the original album

Actual Results:  
In the new album, you can now only see the first of the grouped pictures, but the other grouped pictures are no more visible in the original album

Expected Results:  
I would expect that when grouped pictures are move to another album, all the grouped pictures are moved, and may be visible in the new album.

Please see the attached screen captures: On the left, an an album containing 4 grouped pictures. When I drag it to the "testdestination" album and choose "move here", I get the result displayed in the right: the destination album has only one picture, and 3 picture have stayed in the original album, but are not displayed...
Comment 1 Marcel Wiesweg 2012-07-01 13:51:33 UTC
Git commit 250d2f4b78d5650d8be5b7c2d1802816f2d5a287 by Marcel Wiesweg.
Committed on 01/07/2012 at 15:50.
Pushed by mwiesweg into branch 'master'.

When copying/moving from within digikam, include all grouped images into the operation.

M  +2    -1    NEWS
M  +38   -1    digikam/database/dio.cpp
M  +13   -0    digikam/database/dio_p.h

http://commits.kde.org/digikam/250d2f4b78d5650d8be5b7c2d1802816f2d5a287