When copying/moving from within digikam, include all grouped images into the operation.

BUG: 294578